// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoogleLoginButton /> renders 1`] = `
<a
  className="btn login__social-btn login__social-btn--googleplus"
  href="/login/google?_destination=http://localhost/"
  title={
    <FormattedMessage
      id="google"
      values={Object {}}
    />
  }
>
  <FormattedMessage
    id="google"
    values={Object {}}
  />
</a>
`;

exports[`<GoogleLoginButton /> renders a button with correct registration label 1`] = `
<a
  className="btn login__social-btn login__social-btn--googleplus"
  href="/login/google?_destination=http://localhost/"
  title={
    <FormattedMessage
      id="registration.google"
      values={Object {}}
    />
  }
>
  <FormattedMessage
    id="registration.google"
    values={Object {}}
  />
</a>
`;

exports[`<GoogleLoginButton /> renders without prefix 1`] = `
<a
  className="btn login__social-btn login__social-btn--googleplus"
  href="/login/google?_destination=http://localhost/"
  title={
    <FormattedMessage
      id="google"
      values={Object {}}
    />
  }
>
  <FormattedMessage
    id="google"
    values={Object {}}
  />
</a>
`;
